# first_RAG

./: 2.0_RAG_With_PDF.ipynb  3.0_RAG_persist.ipynb  main.py  pyproject.toml  requirements.txt
Data_persist/: chroma.sqlite3
