[project]
name = "first-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.15",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
]
